spacing issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,7 +87,7 @@ li .text-dark:hover {
   font-size: 14px;
 }
 
-.warning {
+#warning {
   font-size: 14px;
 }
 
